--- a/assets/Css/paystack.css
+++ b/assets/Css/paystack.css
@@ -49,10 +49,15 @@ nav {
     display: block;
 }
 .main-text {
-    height: 110vh;
+    height: 135vh;
     background-color: #e2fee2;
     padding-top: 150px;
     padding-left: 90px;
+}
+h3 {
+    color: #030826;
+    font-weight:600;
+    font-size:45px;
 }
 a {
     text-decoration: none;
@@ -108,8 +113,8 @@ h5  {
     padding-right: 90px;
 }
 .beside-poption2 {
-    margin-top: -210px;
-    padding-right: 200px;
+    margin-top: -200px;
+    padding-right: 125px;
     float: right;
 }
 .beside-poption2-link a {
