--- a/assets/Css/paystack.css
+++ b/assets/Css/paystack.css
@@ -6,18 +6,24 @@ nav {
     width: 100%;
     color: #030826;
     font-weight: 530;
+    position: relative;
 }
+.navbar {
+    /* background-blend-mode: screen; */
+     position: sticky;
+    top:0px;
+} 
 #div-bar1 {
     height: 45px;
     width: auto;
     background-color: #011b33;
     color: white;
-}
+} 
 .container-xxl {
     width: 600px;
 }
-.cont2 {
-    margin-left: 250px;
+.cont2 { 
+    margin-left: 250px; 
     background-color: transparent;
     width: 600px;
 }
@@ -52,7 +58,7 @@ nav {
     height: 135vh;
     background-color: #e2fee2;
     padding-top: 150px;
-    padding-left: 90px;
+    padding-left: 90px;   
 }
 h3 {
     color: #030826;
@@ -61,9 +67,6 @@ h3 {
 }
 a {
     text-decoration: none;
-}
-.navbar {
-    position:fixed;
 }
 .m-text {
     color: #030826;
@@ -137,4 +140,4 @@ h5  {
 #robust {
     float: right;
     margin-top: -585px;
-}
+} 
